Configurando cliente y server

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
+    <script type="module">
+        import {io} from 'https://cdn.socket.io/4.3.2/socket.io.esm.min.js';
+
+        const socket = io();
+
+        const form = document.getElementById('form');
+        const input = document.getElementById('input');
+        const messages = document.getElementById('messages');
+
+        socket.on('chat message', (msg)=>{
+            const item = `<li>${msg}</li>`;
+            messages.insertAdjacentHTML('beforeend', item);
+        })
+
+        form.addEventListener('submit', (e)=>{
+            e.preventDefault();
+
+            socket.emit('chat message', input.value);
+            input.value = '';
+        })
+    </script>
+
     <style>
         *,
         *::before,
@@ -19,7 +41,7 @@
             display: grid;
             place-content: center;
             height: 100vh;
-            padding: 36px;
+            padding: 36px 36px 100px 36px;
             grid-template-rows: 1fr ;
         }
 
@@ -31,12 +53,51 @@
             height: 100%;
             position: relative;
         }
+        #form{
+            bottom: 0;
+            display: flex;
+            height: 48px;
+            left: 0;
+            padding: 4px;
+            position: absolute;
+            right: 0;
+        }
+        #input{
+            border-radius: 9999px;
+            border: 1px solid #eee;
+            flex: 1;
+            margin: 4px;
+            padding: 0 8px;
+        }
+        input:focus{
+            outline: 0;
+        }
+
+        #form > button{
+            background: #09f;
+            color: #fff;
+            border: 0;
+            margin: 4px;
+            border-radius: 4px;
+        }
+        #messages {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        #messages > li {
+            padding: .5rem 1rem;
+        }
+        #messages > li:nth-child(odd) {
+            background: #000;
+        }
     </style>
 </head>
 <body>
     <section id="chat">
+        <ul id="messages"></ul>
         <form id="form">
-            <input type="text" name="message" id="message" placeholder="type a message" autocomplete="off">
+            <input type="text" name="message" id="input" placeholder="type a message" autocomplete="off">
             <button type="submit">Send</button>
         </form>
     </section>
